fix exit button on mobile

--- a/src/Pages/Exercise/Exercise.scss
+++ b/src/Pages/Exercise/Exercise.scss
@@ -159,7 +159,6 @@
 
     .exit-button {
       width: 3%;
-      margin-left: 20px;
     }
 
     .grid-content > img {
